tests/repositories/snapshots/cargo/.github/workflows/publish-template.yml.snap
---
source: tests/common/mod.rs
expression: content
---
on:
  workflow_call:
    inputs:
      crate:
        required: true
        type: string
    secrets:
      CRATES_IO_API_TOKEN:
        required: true

jobs:
  publish-crate:
    runs-on: ubuntu-latest
    steps:
      - name: checkout
        uses: actions/checkout@v4

      - name: install rust
        uses: dtolnay/rust-toolchain@stable

      - name: publish to crates.io
        run: cargo xtask publish ${{ inputs.crate }}
        env:
          CRATES_IO_API_TOKEN: ${{ secrets.CRATES_IO_API_TOKEN }}
